# otus_cpp_print_ip

./: .travis.yml  CMakeLists.txt  Doxyfile  annotated.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_bfccd401955b95cf8c75461437045ac0.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  graph_legend.html  index.html  main_8cpp.html  main_8cpp__incl.map  main_8cpp__incl.md5  namespaceanonymous__namespace_02print__ip_8h_03.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespaces.html  print__ip_8h.html  print__ip_8h__incl.md5  print__ip_8h_source.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__elems-members.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__elems.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__elems_3_010_00_01Args_8_8_8_4-members.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__elems_3_010_00_01Args_8_8_8_4.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__tuple__elems-members.html  structanonymous__namespace_02print__ip_8h_03_1_1is__same__tuple__elems.html  structanonymous__namespace_02print__ip_8h_03_1_1print__ip__elem-members.html  structanonymous__namespace_02print__ip_8h_03_1_1print__ip__elem.html  structanonymous__namespace_02print__ip_8h_03_1_1print__ip__elem_3_010_00_01Args_8_8_8_4-members.html  structanonymous__namespace_02print__ip_8h_03_1_1print__ip__elem_3_010_00_01Args_8_8_8_4.html  ver_8cpp.html  (+6 more)
inc/: print_ip.h  ver.h
search/: all_1.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  classes_0.js  classes_1.js  (+11 more)
src/: CMakeLists.txt  main.cpp  ver.cpp
test/: CMakeLists.txt  test_main.cpp
